--- a/404.html
+++ b/404.html
@@ -1,8 +1,12 @@
+
+
+
+
 {% raw %}
 ---
 permalink: /404.html
 ---
 {% endraw %}
 <script>
-    window.location.href = "/new-page";
+    window.location.href = "/GGit";
 </script>
