--- a/404.html
+++ b/404.html
@@ -1,12 +1,5 @@
-
-
-
-
-{% raw %}
----
-permalink: /404.html
----
-{% endraw %}
+TEST: 访问404.html
+后跳转
 <script>
     window.location.href = "/GGit";
 </script>
