--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
-TEST: 访问404.html
-后跳转
+<h1 style="color: red; font-size: 20px;">TEST: 这里会访问404.html</h1>
+<h1 style="color: red; font-size: 20px;">然后会后跳转</h1>
 <script>
     window.location.href = "/GGit";
 </script>
