--- a/_pages/creative.html
+++ b/_pages/creative.html
@@ -1,5 +1,16 @@
-<h1 style="color: red; font-size: 20px;">TEST: 这里会访问404.html</h1>
+---
+title: "Page Not Found"
+excerpt: "Page not found. Your pixels are in another canvas."
+sitemap: false
+permalink: creative.html
+---
+
+
+
+<h1 style="color: red; font-size: 20px;">To be continued...</h1>
 <h1 style="color: red; font-size: 20px;">然后会后跳转</h1>
-<script>
+要好好设计一下这个页面
+
+<!-- <script>
     window.location.href = "/GGit";
-</script>
+</script> -->
